[package]
name = "ruststats"
version = "0.1.0"
authors = ["Joshua Bowles <jbowayles@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
float-cmp = "0.6.0" # for asserting floating point differences in test